--- a/Module-11/src/sass/components/team.scss
+++ b/Module-11/src/sass/components/team.scss
@@ -94,9 +94,8 @@
 
 .team__lists {
     margin: 0 auto;
-    padding: 0;
-    padding-bottom: 70px;
-}
+    padding: 30px 0 70px;
+   }
 
 .ucupation {
     font-family: $main-fonts2;
