--- a/Module-11/src/sass/components/footer.scss
+++ b/Module-11/src/sass/components/footer.scss
@@ -50,7 +50,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     -ms-flex-line-pack: center;
-    align-content: center;
+    align-items: center;
     padding-top: 10px;
 }
 
