--- a/Module-11/src/sass/components/header.scss
+++ b/Module-11/src/sass/components/header.scss
@@ -4,7 +4,6 @@
 }
 
 .header {
-    /* height: 1008px; */
     padding-top: 20px;
     padding-bottom: 265px;
     background: url(../images/background.png) no-repeat;
@@ -45,66 +44,59 @@
     align-items: center;
     margin: 0 auto;
     margin-bottom: 100px;
-}
-
-.navigation__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    list-style: none;
-}
-
-.navigation__list li {
-    margin-right: 60px;
-}
-
-.navigation__list a {
-    font-family: $main-fonts1;
-    color: $color-white;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
-    position: relative;
-}
-
-.navigation__list :last-child {
-    margin-right: 0;
-}
-
-.navigation__list{
-&:hover {
-    color: $color-yellow;
-}
-}
-.navigation__list a:after {
-    background-color: $color-yellow;
-    display: block;
-    content: "";
-    height: 3px;
-    width: 0%;
-    position: absolute;
-    -webkit-transition: width 0.3s ease-in-out;
-    transition: width 0.3s ease-in-out;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-}
-
-.navigation__list a{
-&:hover:after {
-    width: 100%;
-}
-}
-
-.bin svg {
-    width: 20px;
-    height: 20px;
-    fill: $color-white;
+    &__list{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        list-style: none;
+        li {
+            margin-right: 60px;
+        }
+        a {
+            font-family: $main-fonts1;
+            color: $color-white;
+            font-size: 14px;
+            text-decoration: none;
+            text-transform: uppercase;
+            position: relative;
+        }
+        &:last-child {
+            margin-right: 0;
+        }
+        &:hover {
+            color: $color-yellow;
+        }
+        a:after {
+            background-color: $color-yellow;
+            display: block;
+            content: "";
+            height: 3px;
+            width: 0%;
+            position: absolute;
+            -webkit-transition: width 0.3s ease-in-out;
+            transition: width 0.3s ease-in-out;
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+        }
+        a:hover:after {
+            width: 100%;
+        }
+        .bin{
+            svg {
+                width: 20px;
+                height: 20px;
+                fill: $color-white;
+                }
+        } 
+        
+        .lupa{
+            svg {
+                width: 20px;
+                height: 20px;
+                fill: $color-white;
+            }
+        } 
     }
-
-.lupa svg {
-    width: 20px;
-    height: 20px;
-    fill: $color-white;
 }
 
 .title__service {
@@ -115,43 +107,40 @@
     display: block;
     margin: 0 auto;
     text-align: center;
+    h3 {
+        text-align: center;
+        font-size: 72px;
+        font-family: $main-fonts3;
+        color: $color-white;
+        font-weight: 400;
+        margin-bottom: 50px;
+    }
+    h2 {
+        text-align: center;
+        font-size: 150px;
+        font-family: montserrat;
+        color: $color-white;
+        font-weight: 700;
+        width: 850px;
+        text-transform: uppercase;
+        margin: 0 auto;
+        margin-bottom: 75px;
+    }
+    &__button{
+        font-family: montserrat;
+        font-size: 14px;
+        font-weight: 700;
+        button{
+            font-weight: 700;
+            cursor: pointer;
+            padding: 18px 40px;
+            text-transform: uppercase;
+            margin: 0 auto;
+            text-align: center;
+            border: 4px solid $color-white;
+            color: $color-white;
+            background-color: Transparent;
+        }
+    }
 }
 
-.main__title h3 {
-    text-align: center;
-    font-size: 72px;
-    font-family: $main-fonts3;
-    color: $color-white;
-    font-weight: 400;
-    margin-bottom: 50px;
-}
-
-.main__title__button {
-    font-family: montserrat;
-    font-size: 14px;
-    font-weight: 700;
-}
-
-.main__title__button button {
-    font-weight: 700;
-    cursor: pointer;
-    padding: 18px 40px;
-    text-transform: uppercase;
-    margin: 0 auto;
-    text-align: center;
-    border: 4px solid $color-white;
-    color: $color-white;
-    background-color: Transparent;
-}
-
-.main__title h2 {
-    text-align: center;
-    font-size: 150px;
-    font-family: montserrat;
-    color: $color-white;
-    font-weight: 700;
-    width: 850px;
-    text-transform: uppercase;
-    margin: 0 auto;
-    margin-bottom: 75px;
-}
