--- a/Module-11/src/sass/components/team.scss
+++ b/Module-11/src/sass/components/team.scss
@@ -1,15 +1,188 @@
-.title__service h3,
-.title__team h3 {
+.team__lists {
     margin: 0 auto;
-    text-align: center;
-    font-size: 24px;
-    font-family: $main-fonts3;
-    margin-bottom: 15px;
-}
+    padding: 30px 0 70px;
+    .guys{
+    position: relative;
+    -webkit-transition: none;
+    transition: none;
+    -webkit-transition-duration: 200ms;
+    transition-duration: 200ms;
+    .name {
+        font-family: $main-fonts1;
+        font-weight: 400;
+        font-size: 14px;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+    .ucupation {
+        font-family: $main-fonts2;
+        font-weight: 300i;
+        font-size: 15px;
+        color: $color-dark-grey;
+    }
+        img {
+            margin-bottom: 20px;
+        }
+        &:hover .hover__team {
+            display: block;
+            -webkit-transition-duration: 200ms;
+            transition-duration: 200ms;
+        }
+        .hover__team{
+            background: -webkit-gradient( linear, left bottom, left top, from(rgba(239, 138, 138, 0.8)), to(rgba(242, 217, 136, 0.8)));
+            background: linear-gradient( to top, rgba(239, 138, 138, 0.8), rgba(242, 217, 136, 0.8));
+            position: absolute;
+            width: 380px;
+            height: 470px;
+            top: -10px;
+            left: -10px;
+            -webkit-box-shadow: 10px 10px #95e1d3;
+            box-shadow: 10px 10px #95e1d3;
+            display: none;
+            opacity: 0;
+            -webkit-transition-property: opacity;
+            transition-property: opacity;
+            -webkit-transition-duration: 200ms;
+            transition-duration: 200ms;
+            &:hover {
+                -webkit-transition-property: opacity;
+                transition-property: opacity;
+                -webkit-transition-duration: 200ms;
+                transition-duration: 200ms;
+                opacity: 1;
+            }
+            .socials{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-orient: horizontal;
+                -webkit-box-direction: normal;
+                -ms-flex-direction: row;
+                flex-direction: row;
+                svg {
+                    width: 30px;
+                    height: 30px;
+                    -webkit-transform: translateY(25%);
+                    transform: translateY(25%);
+                    fill: #f38181;
+                }
+                .facebook {
+                    &:hover .svg__hover {
+                     stroke: #ffffff;
+                     fill: #ffffff;
+                 }
+                 @include socials-components;
+             }
+             
+             .twitter{
+                    &:hover .svg__hover {
+                     stroke: #ffffff;
+                     fill: #ffffff;
+                 }
+                 @include socials-components;
+             }
+             
+             .pinterest{
+                    &:hover .svg__hover {
+                     stroke: #ffffff;
+                     fill: #ffffff;
+                 }
+                     @include socials-components;
+             }
+             
+             .instagram{
+                 &:hover .svg__hover {
+                  stroke: #ffffff;
+                  fill: #ffffff;
+                 }
+                 @include socials-components;
+             }
+            }
+            
+        }
+    }
+    .title__team{
+        margin-bottom: 70px;
+        h3{
+        margin: 0 auto;
+        text-align: center;
+        font-size: 24px;
+        font-family: $main-fonts3;
+        margin-bottom: 15px;
+        }
+        h2 {
+        margin: 0 auto;
+        font-family: $main-fonts1;
+        font-size: 30px;
+        text-transform: uppercase;
+        text-align: center;
+        margin-bottom: 50px;
+        }
+        p {
+        display: block;
+        font-family: $main-fonts2;
+        margin: 0 70px;
+        color: $color-grey;
+        font-size: 15px;
+        text-align: center;
+        }
+        
+        .team{
+            &:after {
+            background-color: $color-pink;
+            display: block;
+            content: "";
+            height: 3px;
+            width: 0%;
+            left: 50%;
+            position: absolute;
+            -webkit-transition: width 0.3s ease-in-out;
+            transition: width 0.3s ease-in-out;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+        &:hover:after,
+        &:focus:after {
+            width: 160px;
+        }
+    }
+    }
+    .team__list {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+        li {
+            list-style: none;
+            display: inline-block;
+            margin: 0 auto;
+            padding: 0;
+            text-align: center;
+        }
+    }
+   }
+// .title__service h3,
+// .title__team h3 {
+//     margin: 0 auto;
+//     text-align: center;
+//     font-size: 24px;
+//     font-family: $main-fonts3;
+//     margin-bottom: 15px;
+// }
 
-.title__team :nth-child(n+2) {
-    margin-bottom: 70px;
-}
+// .title__team :nth-child(n+2) {
+//     margin-bottom: 70px;
+// }
 
 .titles:after {
     background-color: $color-pink;
@@ -29,102 +202,98 @@
    &:hover:after,
    &:focus:after{ width: 160px;}
 }
-// :hover:after,
-// .titles:focus:after {
-//     width: 160px;
-// }
-
-.title__service h2,
-.title__team h2 {
-    margin: 0 auto;
-    font-family: $main-fonts1;
-    font-size: 30px;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.team:after {
-    background-color: $color-pink;
-    display: block;
-    content: "";
-    height: 3px;
-    width: 0%;
-    left: 50%;
-    position: absolute;
-    -webkit-transition: width 0.3s ease-in-out;
-    transition: width 0.3s ease-in-out;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-}
-
-.team{
-&:hover:after,
-&:focus:after {
+:hover:after,
+.titles:focus:after {
     width: 160px;
 }
-}
-.title__team>p {
-    display: block;
-    font-family: $main-fonts2;
-    margin: 0 70px;
-    color: $color-grey;
-    font-size: 15px;
-    text-align: center;
-}
 
-.name {
-    font-family: $main-fonts1;
-    font-weight: 400;
-    font-size: 14px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
+// .title__service h2,
+// .title__team h2 {
+//     margin: 0 auto;
+//     font-family: $main-fonts1;
+//     font-size: 30px;
+//     text-transform: uppercase;
+//     text-align: center;
+// }
 
-.team__list {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding: 0;
-    margin: 0;
-}
+// .team:after {
+//     background-color: $color-pink;
+//     display: block;
+//     content: "";
+//     height: 3px;
+//     width: 0%;
+//     left: 50%;
+//     position: absolute;
+//     -webkit-transition: width 0.3s ease-in-out;
+//     transition: width 0.3s ease-in-out;
+//     -webkit-transform: translateX(-50%);
+//     transform: translateX(-50%);
+//     &:hover:after,
+//     &:focus:after {
+//         width: 160px;
+//     }
+// }
 
-.team__lists {
-    margin: 0 auto;
-    padding: 30px 0 70px;
-   }
+// .team{
+// }
+// .title__team>p {
+//     display: block;
+//     font-family: $main-fonts2;
+//     margin: 0 70px;
+//     color: $color-grey;
+//     font-size: 15px;
+//     text-align: center;
+// }
 
-.ucupation {
-    font-family: $main-fonts2;
-    font-weight: 300i;
-    font-size: 15px;
-    color: $color-dark-grey;
-}
+// .name {
+//     font-family: $main-fonts1;
+//     font-weight: 400;
+//     font-size: 14px;
+//     text-transform: uppercase;
+//     margin-bottom: 10px;
+// }
 
-.team__list li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
-}
-.socials {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-}
+// .team__list {
+//     position: relative;
+//     display: -webkit-box;
+//     display: -ms-flexbox;
+//     display: flex;
+//     -webkit-box-pack: justify;
+//     -ms-flex-pack: justify;
+//     justify-content: space-between;
+//     padding: 0;
+//     margin: 0;
+// }
+
+
+// .ucupation {
+//     font-family: $main-fonts2;
+//     font-weight: 300i;
+//     font-size: 15px;
+//     color: $color-dark-grey;
+// }
+
+// .team__list li {
+//     list-style: none;
+//     display: inline-block;
+//     margin: 0 auto;
+//     padding: 0;
+//     text-align: center;
+// }
+// .socials {
+//     position: absolute;
+//     top: 50%;
+//     left: 50%;
+//     -webkit-transform: translate(-50%, -50%);
+//     transform: translate(-50%, -50%);
+//     display: -webkit-box;
+//     display: -ms-flexbox;
+//     display: flex;
+//     -webkit-box-orient: horizontal;
+//     -webkit-box-direction: normal;
+//     -ms-flex-direction: row;
+//     flex-direction: row;
+// }
 
 // .guys {
 //     position: relative;
@@ -134,63 +303,63 @@
 //     transition-duration: 200ms;
 // }
 
-.guys img {
-    margin-bottom: 20px;
-}
+// .guys img {
+//     margin-bottom: 20px;
+// }
 
-.guys{
-    &:hover .hover__team {
-    display: block;
-    -webkit-transition-duration: 200ms;
-    transition-duration: 200ms;
-}
-position: relative;
--webkit-transition: none;
-transition: none;
--webkit-transition-duration: 200ms;
-transition-duration: 200ms;
-}
+// .guys{
+//     &:hover .hover__team {
+//     display: block;
+//     -webkit-transition-duration: 200ms;
+//     transition-duration: 200ms;
+// }
+// position: relative;
+// -webkit-transition: none;
+// transition: none;
+// -webkit-transition-duration: 200ms;
+// transition-duration: 200ms;
+// }
 
-.facebook {
-       &:hover .svg__hover {
-        stroke: #ffffff;
-        fill: #ffffff;
-    }
-    @include socials-components;
-}
+// .facebook {
+//        &:hover .svg__hover {
+//         stroke: #ffffff;
+//         fill: #ffffff;
+//     }
+//     @include socials-components;
+// }
 
-.twitter{
-       &:hover .svg__hover {
-        stroke: #ffffff;
-        fill: #ffffff;
-    }
-    @include socials-components;
-}
+// .twitter{
+//        &:hover .svg__hover {
+//         stroke: #ffffff;
+//         fill: #ffffff;
+//     }
+//     @include socials-components;
+// }
 
-.pinterest{
-       &:hover .svg__hover {
-        stroke: #ffffff;
-        fill: #ffffff;
-    }
-        @include socials-components;
-}
+// .pinterest{
+//        &:hover .svg__hover {
+//         stroke: #ffffff;
+//         fill: #ffffff;
+//     }
+//         @include socials-components;
+// }
 
-.instagram{
-    &:hover .svg__hover {
-     stroke: #ffffff;
-     fill: #ffffff;
-    }
-    @include socials-components;
-}
+// .instagram{
+//     &:hover .svg__hover {
+//      stroke: #ffffff;
+//      fill: #ffffff;
+//     }
+//     @include socials-components;
+// }
 
 
-.socials svg {
-    width: 30px;
-    height: 30px;
-    -webkit-transform: translateY(25%);
-    transform: translateY(25%);
-    fill: #f38181;
-}
+// .socials svg {
+//     width: 30px;
+//     height: 30px;
+//     -webkit-transform: translateY(25%);
+//     transform: translateY(25%);
+//     fill: #f38181;
+// }
 
 // .hover__team {
 //     background: -webkit-gradient( linear, left bottom, left top, from(rgba(239, 138, 138, 0.8)), to(rgba(242, 217, 136, 0.8)));
@@ -210,27 +379,27 @@ transition-duration: 200ms;
 //     transition-duration: 200ms;
 // }
 
-.hover__team{
-&:hover {
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    -webkit-transition-duration: 200ms;
-    transition-duration: 200ms;
-    opacity: 1;
-}
-background: -webkit-gradient( linear, left bottom, left top, from(rgba(239, 138, 138, 0.8)), to(rgba(242, 217, 136, 0.8)));
-    background: linear-gradient( to top, rgba(239, 138, 138, 0.8), rgba(242, 217, 136, 0.8));
-    position: absolute;
-    width: 380px;
-    height: 470px;
-    top: -10px;
-    left: -10px;
-    -webkit-box-shadow: 10px 10px #95e1d3;
-    box-shadow: 10px 10px #95e1d3;
-    display: none;
-    opacity: 0;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    -webkit-transition-duration: 200ms;
-    transition-duration: 200ms;
-}
+// .hover__team{
+// &:hover {
+//     -webkit-transition-property: opacity;
+//     transition-property: opacity;
+//     -webkit-transition-duration: 200ms;
+//     transition-duration: 200ms;
+//     opacity: 1;
+// }
+//     background: -webkit-gradient( linear, left bottom, left top, from(rgba(239, 138, 138, 0.8)), to(rgba(242, 217, 136, 0.8)));
+//     background: linear-gradient( to top, rgba(239, 138, 138, 0.8), rgba(242, 217, 136, 0.8));
+//     position: absolute;
+//     width: 380px;
+//     height: 470px;
+//     top: -10px;
+//     left: -10px;
+//     -webkit-box-shadow: 10px 10px #95e1d3;
+//     box-shadow: 10px 10px #95e1d3;
+//     display: none;
+//     opacity: 0;
+//     -webkit-transition-property: opacity;
+//     transition-property: opacity;
+//     -webkit-transition-duration: 200ms;
+//     transition-duration: 200ms;
+// }
