--- a/Module-11/src/sass/components/amazing-services.scss
+++ b/Module-11/src/sass/components/amazing-services.scss
@@ -1,121 +1,119 @@
-.wrapper{
-    width: 1200px;
-    margin: 0 auto;
+.wrapper {
+  width: 1200px;
+  margin: 0 auto;
 }
-.service{
-    margin: 0 auto;
-    padding-top: 50px;
-    padding-bottom: 30px;
-    .title__service{
-        h3{
-            margin: 0 auto;
-            text-align: center;
-            font-size: 24px;
-            font-family: $main-fonts3;
-            margin-bottom: 15px;
-        }
-        h2{
-            margin: 0 auto;
-            font-family: $main-fonts1;
-            font-size: 30px;
+.service {
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  .title__service {
+    h3 {
+      margin: 0 auto;
+      text-align: center;
+      font-size: 24px;
+      font-family: $main-fonts3;
+      margin-bottom: 15px;
+    }
+    h2 {
+      margin: 0 auto;
+      font-family: $main-fonts1;
+      font-size: 30px;
+      text-transform: uppercase;
+      text-align: center;
+    }
+    .titles {
+      &:after {
+        background-color: $color-pink;
+        display: block;
+        content: '';
+        height: 3px;
+        width: 0%;
+        left: 50%;
+        position: absolute;
+        -webkit-transition: width 0.3s ease-in-out;
+        transition: width 0.3s ease-in-out;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+      }
+      &:hover:after,
+      &:focus:after {
+        width: 160px;
+      }
+    }
+  }
+  .services__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 0;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    li {
+      list-style: none;
+      margin-bottom: 40px;
+    }
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+    &__part {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      width: 350px;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      height: 105px;
+      .services__right {
+        width: 300px;
+        p {
+          font-family: $main-fonts2;
+          margin: 0;
+          &:nth-child(1) {
+            font-size: 14px;
             text-transform: uppercase;
-            text-align: center;
+          }
+          &:nth-child(2) {
+            color: $color-grey;
+            font-size: 15px;
+          }
         }
-        .titles{
-            &:after {
-                background-color: $color-pink;
-                display: block;
-                content: "";
-                height: 3px;
-                width: 0%;
-                left: 50%;
-                position: absolute;
-                -webkit-transition: width 0.3s ease-in-out;
-                transition: width 0.3s ease-in-out;
-                -webkit-transform: translateX(-50%);
-                transform: translateX(-50%);
-            }
-            &:hover:after,
-            &:focus:after {
-                width: 160px;
-            }
+        &:nth-child(1) {
+          padding-bottom: 20px;
         }
+      }
+      .icon__alarm {
+        background-image: url(../images/alarm.png);
+        @include icons-size;
+      }
+
+      .icon__line {
+        background-image: url(../images/line.png);
+        @include icons-size;
+      }
+
+      .icon__computer {
+        background-image: url(../images/computer.png);
+        @include icons-size;
+      }
+
+      .icon__book {
+        background-image: url(../images/book.png);
+        @include icons-size;
+      }
+
+      .icon__home {
+        background-image: url(../images/home.png);
+        @include icons-size;
+      }
+
+      .icon__image {
+        background-image: url(../images/image.png);
+        @include icons-size;
+      }
     }
-    .services__items{
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-        justify-content: space-between;
-        padding: 0;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        li{
-            list-style: none;
-            margin-bottom: 40px;
-        }
-        &:nth-last-child(-n+3) {
-            margin-bottom: 0;
-        }
-        &__part{
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            width: 350px;
-            -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-            justify-content: space-between;
-            height: 105px;
-            .services__right{
-                width: 300px;
-                p{
-                    font-family: $main-fonts2;
-                    margin: 0;
-                    &:nth-child(1){
-                        font-size: 14px;
-                        text-transform: uppercase;
-                    }
-                    &:nth-child(2){
-                        color: $color-grey;
-                        font-size: 15px;
-                    }
-                }
-                &:nth-child(1){
-                    padding-bottom: 20px;
-                }
-            }
-            .icon__alarm{
-                background-image: url(../images/alarm.png);
-                @include icons-size;
-            }
-            
-            .icon__line{
-                background-image: url(../images/line.png);
-                @include icons-size;
-            }
-            
-            .icon__computer{
-                background-image: url(../images/computer.png);
-                @include icons-size;
-            }
-            
-            .icon__book{
-                background-image: url(../images/book.png);
-                @include icons-size;
-            }
-            
-            .icon__home{
-                background-image: url(../images/home.png);
-                @include icons-size;
-            }
-            
-            .icon__image{
-                background-image: url(../images/image.png);
-                @include icons-size;
-            }
-            
-        }
-    }
-    
+  }
 }
