--- a/Module-11/src/sass/helpers/variables.scss
+++ b/Module-11/src/sass/helpers/variables.scss
@@ -1,9 +1,6 @@
-$main-fonts1: "Montserrat",
-sans-serif;
-$main-fonts2: "Roboto",
-sans-serif;
-$main-fonts3: "Kaushan Script",
-sans-serif;
+$main-fonts1: Montserrat, sans-serif;
+$main-fonts2: roboto, sans-serif;
+$main-fonts3: "Kaushan Script", sans-serif;
 $gradient-start-color: rgba(239, 138, 138, 0.8);
 $gradient-end-color: rgba(242, 217, 136, 0.8);
 $color-white: #fff;
